--- a/Quantum Field Theory.tex
+++ b/Quantum Field Theory.tex
@@ -248,9 +248,12 @@ of Quantum Field Theory
 \null
 \vfill
 \begin{center}
-\large © Copyright 2010--\the\year~Sébastien Fauvel
-\vskip 5mm
-All Rights Reserved
+{\large © Copyright 2010--\the\year~Sébastien Fauvel}
+\vskip 1cm
+This work is licensed under the \\
+Creative Commons Attribution-ShareAlike 3.0 Unported License. \\
+To view a copy of this license, visit \\
+\htmladdnormallink{http://creativecommons.org/licenses/by-sa/3.0/}{http://creativecommons.org/licenses/by-sa/3.0/}.
 \end{center}
 \vfill
 Document available online at \htmladdnormallink{quantum-ethics.org}{http://quantum-ethics.org}.
