Added section "The explanatory gap"
Change-Id: I26b290c3866a814aab62dc2e541ca3e5e15a4061

--- a/Quantum Field Theory.tex
+++ b/Quantum Field Theory.tex
@@ -933,7 +933,9 @@ The states of God, taking the general form $(\ket \Psi, \cms)$, are said to be `
 \chapter{Philosophical issues}
 \label{Philosophical issues}
 
-%\section{The explanatory gap}
+\section{The explanatory gap}
+
+As it has been observed by science philosophers in the last century, the gap between our understanding level of physical and of mental phenomena has been continuously growing as the scientific community successfully focused on the development of the Relativity and Quantum theories. It is therefore quite understandable on a science psychological level that some cognitive neuroscientists may have been hoping to be able to explain one day all mental phenomena in terms of biophysical processes. However, even if we could describe one day the correspondence between mental states and physical states of the brain, the question of knowing ``why'' some specific aspects of the physical world correspond to certain mental experiences, and why some other aspects do not, would still remain open. This question is known as the ``explanatory gap'' and isn't to be answered by a theory focusing uniquely on the physical world. The theory developed in this book addresses this issue in a threefold way. First, it gives a well-defined status to mental states, considered to be an aspect of reality on their own that isn't merely derived from the physical. This is expressed in the theory by the form  $\H \times \CMS$ of the set of the possible states of God. Second, it defines the form of the correspondence between physical and mental states, which is given by the family of the supplementary subspaces $\H_\cms$ corresponding to each possible mental state $\cms$. This stresses the idea that individual mental experiences are not necessarily only related to physical aspects of a single, individual brain, but that the collective mental experience globally relates to the physical state of the world as a whole. Finally, the description of the random collapse process from a virtual into a real state of God gives a first explanation of what is happening at a physical and at a mental level as a mental state is getting experienced.
 
 \section{Skepticism}
 
