Updated address and added link to GitHub on the webpage.
Change-Id: I94953216cf3c2921391bc95f71656ffd5895c8f6

--- a/Quantum Field Theory.tex
+++ b/Quantum Field Theory.tex
@@ -241,7 +241,7 @@ of Quantum Field Theory
 \end{center}
 \vfill
 \null
-\footnotetext[2]{Contact: Marksteinweg~4, D-79379 Müllheim, Germany. E-mail: \htmladdnormallink{\texttt{fauvel@gmx.de}}{mailto:fauvel@gmx.de}.}
+\footnotetext[2]{Contact: Sébastien Fauvel, Ackerstrasse~43, CH-4057 Basle, Switzerland. E-mail: \htmladdnormallink{\texttt{sebastien.fauvel@gmx.ch}}{mailto:sebastien.fauvel@gmx.ch}.}
 
 \newpage
 
