--- a/Quantum Field Theory.tex
+++ b/Quantum Field Theory.tex
@@ -291,8 +291,22 @@ To view a copy of this license, visit \\
 Document available online at \htmladdnormallink{quantum-ethics.org}{http://quantum-ethics.org}.
 }
 
-%TODO Preface
-%\chapter{Preface}
+\cleardoublepage
+\section*{Preface}
+
+Dear reader!
+
+This book has been written with the main concern of providing the scientific community with a mean of building a bridge between Physicists and Philosophers in the field of Quantum Physics. It defines a common language to describe the realm of our experience of the world and I truly hope that this new language will find a large audience in both communities. For Physicists, it stresses the importance of developing a well-defined mathematical formalism for Quantum Field Theory, since this is the necessary condition for Philosophers to identify the underlying ontology, which builds the base of every philosophical discourse on the implications of Quantum Physics. The development of a coherent, convincing discourse by Philosophers builds in turn the ground on which every conceptually and technically correct vulgarization effort can foot, and contributes thereby to broaden the popularity and acceptance of Quantum Physics through the whole society and especially among students. Philosophers, on the other hand, gain a mean of confronting their ideas with the latest insights into fundamental physics, of expressing these ideas in terms of naturalistically grounded metaphysics and of articulating speculative thoughts in the uncertainty zones remaining within the physical theory or inherent to it.
+
+Although the careful reader will find in the first edition of this book all the main ideas I wanted to develop here, there still are a few areas which I couldn't find the time to develop to the extend they would have deserved. For instance, I am perfectly aware of the fact that some Physicists could have great difficulties to consider the formulation of Quantum Field Theory presented in this book, which is essentially a lattice regularization, as an acceptable fundamental theory, since it lacks to respect the principles of Gauge and Poincaré invariance. I included a few calculation examples in order to show that, at usual energy and distance scales, the resulting physics is the same, but it would have been nice to add a classical renormalization example, a treatment of the weak and strong interactions as well as of the Higgs mechanism and of some gravitational model.
+
+The philosophical aspects of this book might also have deserved a more extensive treatment. I have given a few basic examples to explain how the physical theory can be used as a reference language in order to express philosophical questions, but I should have added much more and more various examples to give an adequate idea of the potential of this method. 
+
+These imperfections of the first edition will certainly be a good reason of publishing a second, augmented edition in the future. For the time being, I wish you a fruitful and enjoyable reading and would appreciate any comments and suggestions!
+
+Sébastien Fauvel
+
+January 6, 2013
 
 \cleardoublepage
 \tableofcontents
