--- a/Quantum Field Theory.tex
+++ b/Quantum Field Theory.tex
@@ -250,8 +250,8 @@
 \begin{center}
 \iftoggle{paperback}
 {
-{\Huge Quantum Ethics} \\
-\vskip 1cm
+{\Huge \textbf{Quantum\\Ethics}}
+\vskip 1.2cm
 A Spinozist Interpretation \\
 of Quantum Field Theory
 \vskip 2cm
@@ -292,6 +292,13 @@ Document available online at \htmladdnormallink{quantum-ethics.org}{http://quant
 }
 
 \cleardoublepage
+\section*{Acknowledgements}
+
+First and foremost, I would like to thank my wife Angela for having sacrificed so much of our precious free time as I was working on this book. This publication would never have been possible without her patience, her understanding, all her love and support. Thank you!
+
+I would also like to thank my colleague Markus Matteucci for initiating me into the art of book publishing, my fellow students Christian Hagendorf and Tristan Machado for our encouraging and fruitful discussions that did much to my understanding of Physics, my teachers Christian Swit and Stephane Gentil who introduced me to the joys of Philosophy and Mathematics, my uncle Bertrand Liaudet and my regretted `godfather' Frédéric Poupaud for having made me discover the world of Algorithmic and Informatics at a far too early age. They all did very much for my personal evolution.
+
+\cleardoublepage
 \section*{Preface}
 
 Dear reader!
@@ -304,9 +311,9 @@ The philosophical aspects of this book might also have deserved a more extensive
 
 These imperfections of the first edition will certainly be a good reason of publishing a second, augmented edition in the future. For the time being, I wish you a fruitful and enjoyable reading and would appreciate any comments and suggestions!
 
-Sébastien Fauvel
+January, 2013
 
-January 6, 2013
+Sébastien Fauvel
 
 \cleardoublepage
 \tableofcontents
@@ -315,21 +322,21 @@ January 6, 2013
 
 \section*{Interpreting Quantum Field Theory}
 
-The birth of Quantum Physics in the 1920s has been marked by a long period of intense controversies about its interpretation, which has been recently reviewed by Juan Miguel Marin in his paper \textit{‘Mysticism’ in quantum mechanics: the forgotten controversy}~\cite{Marin2009}. The Copenhagen interpretation which emerged from these debates has been seemingly dominating the scene in the 1950s-1960s, not because it was intrinsically better than others, but because it seemed to challenge the materialist world view of classical, `everyday' physics as little as possible. Since the 1970s, however, numerous alternative interpretations have been proposed and older interpretations further developed: Pilot-Wave Theory, Many-Worlds interpretation, Many-Minds interpretation, Dynamical Collapse Theories, Decoherent Histories... All these attempts to give Quantum Physics a sound interpretation are facing the problem that the mathematical theory itself, in the form of the Standard Model of Quantum Field Theory (or of slight variants regarding the existence of the Higgs field, of neutrino masses...), is ill-defined, and that it is therefore impossible to assign a physical or metaphysical meaning to the fundamental mathematical entities of the theory. Of course, it is possible to choose a specific, mathematically well-defined regularization of the theory for this purpose, but since renormalization methods are leading, in the singular limit of the original theory, to the same results for different regularization schemes, we don't know which regularization is the right one, and as a consequence we don't know either which are the fundamental mathematical entities to be interpreted. Quite surprisingly, however, it seems that this issue has never been seriously accounted for yet. Existing interpretations of Quantum Physics are either restricted to non-relativistic Quantum Mechanics, which is no fundamental theory, or are formulated so vaguely that they are hardly more than the mere idea of an interpretation, which has made most `serious' physicists doubt that such an interpretation is possible at all. This book will have reached his goal if it convinces the reader of the contrary and helps interpretation issues recovering again their place at the heart of the research on Quantum Field Theory. For this purpose, I shall take as an example a lattice regularization scheme, formulate in this well-defined framework a rather conservative interpretation inspired by Spinoza's philosophy and show that classical philosophical questions can be formulated as simple physical hypotheses in the frame of the resulting naturalistic metaphysics.
+The birth of Quantum Physics in the 1920s has been marked by a long period of intense controversies about its interpretation, which has been recently reviewed by Juan Miguel Marin in his paper \textit{‘Mysticism’ in quantum mechanics: the forgotten controversy}~\cite{Marin2009}. The Copenhagen interpretation which emerged from these debates is dominating the scene since the 1950s-1960s, not because it is intrinsically better than others, but because it seems to challenge the materialist world view of classical, `everyday' physics as little as possible. Since the 1970s, however, numerous alternative interpretations have been proposed and further developed: Pilot-Wave Theory, Dynamical Collapse Theories, Many-Worlds interpretation, Many-Minds interpretation, Decoherent Histories... All these attempts to give Quantum Physics a sound interpretation are facing the problem that the mathematical theory itself, in the form of the Standard Model of Quantum Field Theory (or of slight variants regarding the existence of the Higgs field, of neutrino masses...), is ill-defined, and that it is therefore impossible to assign a physical or metaphysical meaning to the fundamental mathematical entities of the theory, i.e. to define an ontology. Of course, it is possible to choose a specific, mathematically well-defined regularization of the theory for this purpose, but since renormalization methods are leading, in the singular limit of the original theory, to the same results for different regularization schemes, we don't know which regularization is the right one, and as a consequence we don't know either which are the fundamental mathematical entities to be interpreted. Quite surprisingly, however, it seems that this issue has never been seriously accounted for yet. Existing interpretations of Quantum Physics are either restricted to non-relativistic Quantum Mechanics, which is no fundamental theory, or are formulated so vaguely that they are hardly more than the mere idea of an interpretation, which has made most physicists doubt that such an interpretation is possible at all. This book will have reached his goal if it convinces the reader of the contrary and helps interpretation issues recovering again their place at the heart of the research on Quantum Field Theory. For this purpose, I shall take as an example a lattice regularization scheme, formulate in this well-defined framework a rather conservative interpretation inspired by Spinoza's philosophy and show that classical philosophical questions can be formulated as simple physical hypotheses in the frame of the resulting naturalistic metaphysics.
 
-\section*{Motivation}
+\section*{Philosophical motivation}
 
-Most philosophers have ascribed a central role to the ethics in their work, as the answer to the question ``How should I live?'' requires a preliminary reflection about all the fields of our existence, from metaphysics via physics, psychology and morals up to politics. Up to the emergence of Quantum Field Theory in the late 1920s, philosophers have always been able to integrate the knowledge gathered in the field of physics into their world view: In 17th-century Europe, for instance, the Dutch philosopher Baruch Spinoza worked out in his \textit{Ethics}~\cite{Spinoza1677} the deterministic materialism of classical mechanics and based his philosophy on the idea that everything in Nature happens according to the divine necessity, both at the material and at the spiritual level. In fact, from the Antics up to the Age of Enlightenment, physicists used to consider themselves primarily as Nature philosophers. In the modern ages, however, the scientific community began to split under the influence of industrial work organization into small groups of specialists lacking interdisciplinary skills. Nowadays, mainstream physicists even consider philosophical interpretations of physics as non-scientific and pointless. Needless to say, such a lack of intellectual rigor has had serious consequences for the conceptual and formal quality of physical theories. In the case of Quantum Field Theory, this attitude has resulted in the fact that, for the last eighty years, no consensus could be reached on its two major issues, known as the \textit{measurement problem} and as the \textit{main issue}. The latter is a formal issue consisting in conceiving a mathematically well-defined quantum field theory formally compatible to Special Relativity\footnotemark[1], which is thought to be impossible, although this hasn't been proved definitely yet. The former is an interpretation issue concerning the relation between ``mind'', i.e. the primitive form of our experience of the world, and ``body'', i.e. the physical world described in terms of quantum fields. There have been numerous propositions for this interpretation, from the very beginning of Quantum Field Theory in the 1920s and 1930s until now, but as long as the mathematical formalism of the theory is ill-defined, these interpretations cannot be formulated precisely either. Strictly speaking, however, the whole theory doesn't make any sense if this interpretation issue doesn't become precisely answered. In order to give a sound philosophical interpretation of Quantum Field Theory, it is therefore necessary in the first place to put the mathematical formalism on a well-defined basis, which cannot be formally compatible with Special Relativity if the main issue really cannot be solved; Relativity Theory should then emerge as an approximation at usual energy and distance scales. In this book, I shall propose an answer to both issues and thus lay the foundations of an ethic taking into account the world view sustained by Quantum Field Theory.
+Most philosophers have ascribed a central role to the ethics in their work, as the answer to the question ``How should I live?'' requires a preliminary reflection about all the fields of our existence, from metaphysics via physics, psychology and morals up to politics. Up to the emergence of Quantum Field Theory in the late 1920s, philosophers have always been able to integrate the knowledge gathered in the field of physics into their world view: In 17th-century Europe, for instance, the Dutch philosopher Baruch Spinoza worked out in his \textit{Ethics}~\cite{Spinoza1677} the deterministic materialism of classical mechanics and based his philosophy on the idea that everything in Nature happens according to the divine necessity, both at the material and at the spiritual level. In fact, from the Antics up to the Age of Enlightenment, physicists used to consider themselves primarily as Nature philosophers. In the modern ages, however, the scientific community began to split under the influence of industrial work organization into small groups of specialists lacking interdisciplinary skills. Nowadays, mainstream physicists even consider philosophical interpretations of physics as non-scientific and pointless. Needless to say, such a lack of intellectual rigor has had serious consequences for the conceptual and formal quality of physical theories. In the case of Quantum Field Theory, this attitude has resulted in the fact that, for the last eighty years, no consensus could be reached on its two major issues, known as the \textit{measurement problem} and the \textit{main issue}. The latter is a formal issue consisting in conceiving a mathematically well-defined quantum field theory formally compatible to Special Relativity\footnotemark[1], which would be highly desirable but is thought to be technically impossible, although this hasn't been proved definitely yet. The former is an interpretation issue concerning the relation between ``mind'', i.e. the primitive form of our experience of the world, and ``body'', i.e. the physical world described in terms of quantum fields. There have been numerous propositions for this interpretation, from the very beginning of Quantum Field Theory in the 1920s and 1930s until now, but as long as the mathematical formalism of the theory is ill-defined, these interpretations cannot be formulated precisely either. Strictly speaking, however, the whole theory doesn't make any sense if this interpretation issue doesn't become precisely answered. In order to give a sound philosophical interpretation of Quantum Field Theory, it is therefore necessary in the first place to put the mathematical formalism on a well-defined basis. The theory cannot be formally compatible with Special Relativity if the main issue really cannot be solved; Relativity Theory should then emerge as an approximation at usual energy and distance scales. In this book, I shall propose an answer to both issues and thus lay the foundations of an ethic taking into account the world view sustained by Quantum Field Theory.
 
 \footnotetext[1]{Precisely, one requires that the classical Lagrangian used in the heuristical construction of the theory be Poincaré invariant and describes local (contact) interactions of point particles in the Minkowski space-time.}
 
 \section*{Abstract}
 
-In the formulation of Quantum Field Theory proposed in this book, Nature presents the two aspects of a physical and of a mental world in mutual interaction. The mental world can be adequately experienced by the collectivity of all sentient beings: A state of the mental world is given by a set of a various number of individual minds with definite conscious thoughts. Though we are experiencing this mental world directly, we only experience it partially under the aspect of a single individual mind (which we're used to call ``our'' mind), and must communicate with others in order to get closer to an adequate representation of the mental world as a whole. Communication happens over social interactions in the physical world, which is an aspect of Nature that we don't experience directly but only through its influence on our subjective mental experience. This physical world, best described in terms of quantum fields, is by nature holistic and doesn't involve precise boundaries of individual bodies as they may exist for individual minds. A state of this physical world is given by a quantum superposition of so-called localized states, which are given by the number of particles of each kind (e.g. 1 spin down positron and 4 right-handed circularly polarized photons) at each point of space. Each physical state can be uniquely decomposed into a sum of components corresponding to each possible mental state, and this decomposition also defines a probability law on the set of all possible mental states. The joined temporal evolution of both aspects of Nature is a tree-steps process repeated indefinitely: First, the initial state of the physical world undergoes a deterministic, Hamiltonian evolution of a given, ``elementary'' duration. Then, the final physical state defines a probability law according to which a mental state is being selected and becomes collectively experienced. Finally, the component of the physical state corresponding to the selected mind state becomes the initial state of the next evolution process. In this world view, the mystery of consciousness consists in the fact that there is, to some extent, an adequation between the conscious thoughts of individual minds and some physical processes happening in the corresponding physical states, e.g. the biological processes of consciousness within a human brain.
+In the formulation of Quantum Field Theory proposed in this book, Nature presents the two aspects of a physical and of a mental world in mutual interaction. The mental world can be adequately experienced by the collectivity of all sentient beings: A state of the mental world is given by a set of a various number of individual minds with definite conscious thoughts. Though we are experiencing this mental world directly, we only experience it partially under the aspect of a single individual mind (which we're used to call ``our'' mind), and must communicate with others in order to get closer to an adequate representation of the mental world as a whole. Communication happens in the physical world, which is an aspect of Nature that we don't experience directly but only through its influence on our subjective mental experience. This physical world, best described in terms of quantum fields, is by nature holistic and doesn't involve precise boundaries of individual bodies as they may exist for individual minds. A state of this physical world is given by a quantum superposition of so-called localized states, which are given by the number of particles of each kind (e.g. 1 spin down positron and 4 right-handed circularly polarized photons) at each point of space. Each physical state can be uniquely decomposed into a sum of components corresponding to each possible mental state, and this decomposition defines a probability law on the set of all possible mental states. The joined temporal evolution of both aspects of Nature is a tree-steps process repeated indefinitely: First, the initial state of the physical world undergoes a deterministic, Hamiltonian evolution of a given, ``elementary'' duration. Then, the final physical state defines a probability law according to which a mental state is being selected and becomes collectively experienced. Finally, the component of the physical state corresponding to the selected mind state becomes the initial state of the next evolution process. In this world view, the mystery of consciousness consists in the fact that there is, to some extent, an adequation between the conscious thoughts of individual minds and some physical processes happening in the corresponding physical states, e.g. the biological processes of consciousness within a human brain.
 
 \section*{Overview}
 
-This book begins in chapter \ref{Quantum fields} with the formulation of a mathematically well-defined frame for any theory of mutually interacting quantum fields of point particles. Well-definedness is achieved by making sure that the Hamilton space of the quantum states is finite dimensional, so that the Hamiltonian evolution is trivially well-defined for any interaction Hamiltonian. The ``ingredients'' of this mathematical frame are already well-known in Quantum Field Theory: Space is supposed to have the structure of a finite three dimensional lattice, the definition of the kinetic energy Hamiltonian makes use of the SLAC derivative and the occupation number of single modes of the particle fields is supposed to be bounded for Bosons, too.
+This book begins in chapter \ref{Quantum fields} with the formulation of a mathematically well-defined frame for any theory of mutually interacting quantum fields of point particles. Well-definedness is achieved by making sure that the Hamilton space of the quantum states is finite dimensional, so that the Hamiltonian evolution is trivially well-defined for any interaction Hamiltonian. The ``ingredients'' of this mathematical frame are already well-known in Quantum Field Theory: Space is supposed to have the structure of a finite three dimensional lattice, the definition of the kinetic energy Hamiltonian making use of the SLAC derivative, and the occupation number of single modes of the particle fields is supposed to be bounded for Bosons as well as for Fermions.
 
 The Hamiltonian evolution of quantum fields is then defined very classically for an arbitrary interaction Hamiltonian in chapter \ref{Hamiltonian evolution}, where general results of scattering theory are being derived.
 
